Fixed Compression error

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/bb0d9ecdb05db3e84da20bd14a4f84dc.loader.js";
       var config = {
-        dataUrl: buildUrl + "/c63665125dfa70aaf9e6684e3f4f8154.data.br",
-        frameworkUrl: buildUrl + "/89d47926d2089244ecedb448ffe46d6e.framework.js.br",
-        codeUrl: buildUrl + "/5aa6372c2f62576ef4233c43b83130ba.wasm.br",
+        dataUrl: buildUrl + "/ef0958e18dfa0f943d97a5e71b3f6dcd.data",
+        frameworkUrl: buildUrl + "/89d47926d2089244ecedb448ffe46d6e.framework.js",
+        codeUrl: buildUrl + "/5aa6372c2f62576ef4233c43b83130ba.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Ali Haider",
         productName: "FlyBird - Demo",
